so reworked the code for mesh: mesh transformation, raycasting through different scenes  and mask to see the differencese: what changed, also added gt for semantic labels which are not object id but e.g. chair and stuff like that

--- a/preprocessing/ray_shooting_boxes/pixel_wise_ray_shooting.ipynb
+++ b/preprocessing/ray_shooting_boxes/pixel_wise_ray_shooting.ipynb
@@ -2,9 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jupyter environment detected. Enabling Open3D WebVisualizer.\n",
+      "[Open3D INFO] WebRTC GUI backend enabled.\n",
+      "[Open3D INFO] WebRTCWindowSystem: HTTP handshake server disabled.\n",
+      "/local/home/ekoller/BT\n"
+     ]
+    }
+   ],
    "source": [
     "import os \n",
     "import os.path as osp\n",
@@ -35,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -2549,7 +2560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2577,7 +2588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2604,7 +2615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2641,9 +2652,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "get the reference of 10b1795b-3938-2467-88fe-b10cad8913f8\n"
+     ]
+    }
+   ],
    "source": [
     "#for a given scan returns the reference, if the scan is reference returns the reference\n",
     "def get_reference_id(data_dir,scan_id):\n",
@@ -2670,7 +2689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2739,7 +2758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2770,7 +2789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2857,7 +2876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2993,7 +3012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4163,7 +4182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -4216,8 +4235,8 @@
     "    \n",
     "#ray visualization\n",
     "lines = []\n",
-    "for i in range(0,rays.shape[0],10):  # Iterate over height (rows)\n",
-    "        for j in range(0,rays.shape[1],10):  # Iterate over width (columns)\n",
+    "for i in range(0,rays.shape[0],30):  # Iterate over height (rows)\n",
+    "        for j in range(0,rays.shape[1],30):  # Iterate over width (columns)\n",
     "            origin = rays[i, j, :3].cpu().numpy() # Extract origin of the ray\n",
     "            direction = rays[i, j, 3:].cpu().numpy()  # Extract direction of the ray\n",
     "            endpoint = origin + direction * 2  # Scale direction for visualization\n",
