--- a/unused_stuff/ray_intersection_in_rescan.ipynb
+++ b/unused_stuff/ray_intersection_in_rescan.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -47,15 +47,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "#reading in the necessary data\n",
     "data_dir ='/local/home/ekoller/R3Scan'\n",
     "scenes_dir = '/local/home/ekoller/R3Scan/scenes'\n",
-    "scan_id= \"10b1795b-3938-2467-88fe-b10cad8913f8\" #is reference scan  since it is a reference scan everything shouls be correctly hit\n",
-    "frame_number = \"000033\"\n",
+    "scan_id= \"38770c95-86d7-27b8-8717-3485b411ddc7\" #is reference scan  since it is a reference scan everything shouls be correctly hit\n",
+    "frame_number = \"000015\"\n",
     "img_width = 960\n",
     "img_height = 540\n",
     "\n",
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,7 +302,7 @@
     "            color_img = color_imgs[frame_idx]\n",
     "            \n",
     "            \n",
-    "            img_name = \"gt_frame-\"+str(frame_idx)+\".jpg\"\n",
+    "            img_name = \"gt_frame_rescan_coord-\"+str(frame_idx)+\".jpg\"\n",
     "            obj_id_img_file = osp.join(save_scan_obj_dir, img_name)\n",
     "            global_img_file = osp.join(save_scan_global_dir, img_name)\n",
     "            color_img_file = osp.join(save_scan_color_dir, img_name)\n",
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
