issue found, not fixed, overall approach to getting the nodes ok just the file modality not

--- a/rayIntersections/ray_shooting_mesh/ray_intersection.ipynb
+++ b/rayIntersections/ray_shooting_mesh/ray_intersection.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,32 +232,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 155,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "extrinsic [[-0.28786874 -0.24047897 -0.92698519  0.14788137]\n",
-      " [-0.85311918  0.50417769  0.13413639  0.47410249]\n",
-      " [ 0.43510883  0.82944263 -0.35029464 -0.40176852]\n",
-      " [ 0.          0.          0.          1.        ]]\n",
-      "extrinsic [[-0.28786874 -0.24047897 -0.92698519  0.14788137]\n",
-      " [-0.85311918  0.50417769  0.13413639  0.47410249]\n",
-      " [ 0.43510883  0.82944263 -0.35029464 -0.40176852]\n",
-      " [ 0.          0.          0.          1.        ]]\n",
-      "extrinsic [[-0.28786874 -0.24047897 -0.92698519  0.14788137]\n",
-      " [-0.85311918  0.50417769  0.13413639  0.47410249]\n",
-      " [ 0.43510883  0.82944263 -0.35029464 -0.40176852]\n",
-      " [ 0.          0.          0.          1.        ]]\n",
-      "extrinsic [[-0.28786874 -0.24047897 -0.92698519  0.14788137]\n",
-      " [-0.85311918  0.50417769  0.13413639  0.47410249]\n",
-      " [ 0.43510883  0.82944263 -0.35029464 -0.40176852]\n",
-      " [ 0.          0.          0.          1.        ]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#try out the ground truth generation\n",
     "project_mesh_gt_generation(data_dir,scenes_dir, scan_id, frame_number)\n"
@@ -265,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,6 +333,8 @@
     "        obj_id_imgs[frame_idx] = obj_id_map\n",
     "        global_id_imgs[frame_idx] = global_id_map\n",
     "        color_imgs[frame_idx] = color_map\n",
+    "\n",
+    "   \n",
     "        \n",
     "    #create directories (here tmp to try out & save \n",
     "    save_scan_color_dir = osp.join(data_dir, \"proj\", curr_scan_id, \"color\")\n",
@@ -376,7 +355,7 @@
     "        global_id_img = global_id_imgs[frame_idx]\n",
     "        color_img = color_imgs[frame_idx]\n",
     "\n",
-    "        \n",
+    "        print(\"obje id image\" ,obj_id_img)\n",
     "        img_name = \"projection_pose_in_\"+ str(new_scan_id)+\"_\"+str(frame_idx)+\".jpg\"\n",
     "        obj_id_img_file = osp.join(save_scan_obj_dir, img_name)\n",
     "        global_img_file = osp.join(save_scan_global_dir, img_name)\n",
@@ -398,16 +377,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 182,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "obje id image [[ 2  2  2 ...  1  1  1]\n",
+      " [ 2  2  2 ...  1  1  1]\n",
+      " [ 2  2  2 ...  1  1  1]\n",
+      " ...\n",
+      " [12 12 12 ...  1  1  1]\n",
+      " [12 12 12 ...  1  1  1]\n",
+      " [12 12 12 ...  1  1  1]]\n"
+     ]
+    }
+   ],
    "source": [
     "project_mesh_diff(data_dir, scenes_dir,curr_scan_id, new_scan_id, frame_number)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -461,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -484,6 +477,7 @@
     "    gt_color = gt_colors[frame_number]\n",
     "    gt_obj_id = gt_obj_ids[frame_number]\n",
     "    gt_global_id= gt_global_ids[frame_number]\n",
+    "\n",
     "    # scan_color_file = osp.join(data_dir, \"gt_tmp\", new_scan_id, \"color\",\"gt_frame-{}.jpg\".format(frame_number))\n",
     "    # scan_obj_file = osp.join(data_dir, \"gt_tmp\", new_scan_id, \"obj_id\",\"gt_frame-{}.jpg\".format(frame_number))\n",
     "    # scan_global_file = osp.join(data_dir, \"gt_tmp\", new_scan_id, \"global_id\",\"gt_frame-{}.jpg\".format(frame_number))\n",
@@ -493,7 +487,9 @@
     "    # gt_global_id= cv2.imread(scan_global_file, cv2.IMREAD_UNCHANGED)\n",
     "\n",
     "\n",
-    "\n",
+    "    \"\"\"\n",
+    "    until here the dimensions and entries are as excpected, however not something is wrong with the way the matrix is saved and filled\n",
+    "    \"\"\"\n",
     "    #get the rayintersection of the mesh based on the new computations\n",
     "    #compute the intersections and maps\n",
     "    project_mesh_diff(data_dir, scenes_dir,curr_scan_id, new_scan_id, frame_number)\n",
@@ -506,34 +502,37 @@
     "    pj_obj_id = cv2.imread(obj_path, cv2.IMREAD_UNCHANGED)\n",
     "    pj_global_id = cv2.imread(gloabl_path, cv2.IMREAD_UNCHANGED)\n",
     "\n",
+    "   \n",
     "\n",
+    "    img_height, img_width, channels = pj_color.shape\n",
     "    #iterate through the whole image \n",
     "    curr_res_color = np.full_like(gt_color, -1)\n",
-    "    curr_res_obj_id = np.full_like(gt_color, -1)\n",
-    "    curr_res_global_id = np.full_like(gt_color, -1)\n",
+    "    curr_res_obj_id = np.full_like((img_height,img_width,1), -1)\n",
+    "    curr_res_global_id = np.full_like((img_height,img_width,1), -1)\n",
     "\n",
     "    new_res_color = np.full_like(gt_color, -1)\n",
-    "    new_res_obj_id = np.full_like(gt_color, -1)\n",
-    "    new_res_global_id = np.full_like(gt_color, -1)\n",
+    "    new_res_obj_id = np.full_like((img_height,img_width,1), -1)\n",
+    "    new_res_global_id = np.full_like((img_height,img_width,1), -1)\n",
     "\n",
     "    #make the mask: originally black: wherever there is a difference take the value of the new_scan_id gt\n",
     "\n",
-    "    img_height, img_width, channels = curr_res_color.shape\n",
+    "    \n",
     "\n",
+    "   \n",
     "    for i in range(img_height):\n",
     "        for j in range(img_width):\n",
     "            if (pj_obj_id[i][j] != gt_obj_id[i][j]):\n",
     "                #the new values in the modified area\n",
-    "                new_res_color[i][j] = gt_color[i][j]\n",
-    "                new_res_obj_id[i][j] = gt_obj_id[i][j]\n",
-    "                new_res_global_id[i][j] = gt_global_id[i][j]\n",
+    "                new_res_color[i,j] = gt_color[i][j]\n",
+    "                new_res_obj_id[i,j] = gt_obj_id[i][j]\n",
+    "                new_res_global_id[i,j] = gt_global_id[i][j]\n",
     "\n",
     "                #the values which are impacted in curr \n",
-    "                curr_res_color[i][j] = pj_color[i][j]\n",
-    "                curr_res_obj_id[i][j] = pj_obj_id[i][j]\n",
-    "                curr_res_global_id[i][j] = pj_global_id[i][j]\n",
+    "                curr_res_color[i,j] = pj_color[i][j]\n",
+    "                curr_res_obj_id[i,j] = pj_obj_id[i][j]\n",
+    "                curr_res_global_id[i,j] = pj_global_id[i][j]\n",
     "\n",
-    "\n",
+    "    print(\"new res_obj Id\", curr_res_obj_id)\n",
     "    #also save the files as needed\n",
     "    #create directories (here tmp to try out & save \n",
     "    save_mask_color_dir = osp.join(data_dir, \"mask\", curr_scan_id, \"color\")\n",
@@ -550,6 +549,7 @@
     "\n",
     "    #save the files in the corresponding directories\n",
     "        \n",
+    "    \n",
     "    img_name = \"new_val_mask_pose_in_\"+ str(new_scan_id)+\"_\"+str(frame_number)+\".jpg\"\n",
     "    obj_id_img_file = osp.join(save_mask_obj_dir, img_name)\n",
     "    global_img_file = osp.join(save_mask_global_dir, img_name)\n",
@@ -574,21 +574,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "Expected 1D or 2D array, got 3D array instead",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "obje id image [[ 2  2  2 ...  1  1  1]\n",
+      " [ 2  2  2 ...  1  1  1]\n",
+      " [ 2  2  2 ...  1  1  1]\n",
+      " ...\n",
+      " [12 12 12 ...  1  1  1]\n",
+      " [12 12 12 ...  1  1  1]\n",
+      " [12 12 12 ...  1  1  1]]\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "too many indices for array: array is 1-dimensional, but 2 were indexed",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[142], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m#computes the mask and shows the mask\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[43mget_transformation_mask\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdata_dir\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mscenes_dir\u001b[49m\u001b[43m,\u001b[49m\u001b[43mcurr_scan_id\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnew_scan_id\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mframe_number\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[0;32mIn[141], line 90\u001b[0m, in \u001b[0;36mget_transformation_mask\u001b[0;34m(data_dir, scenes_dir, curr_scan_id, new_scan_id, frame_number)\u001b[0m\n\u001b[1;32m     88\u001b[0m global_img_file \u001b[38;5;241m=\u001b[39m osp\u001b[38;5;241m.\u001b[39mjoin(save_mask_global_dir, img_name)\n\u001b[1;32m     89\u001b[0m color_img_file \u001b[38;5;241m=\u001b[39m osp\u001b[38;5;241m.\u001b[39mjoin(save_mask_color_dir, img_name)\n\u001b[0;32m---> 90\u001b[0m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msavetxt\u001b[49m\u001b[43m(\u001b[49m\u001b[43mobj_id_img_file\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnew_res_obj_id\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mfmt\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;132;43;01m%d\u001b[39;49;00m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     91\u001b[0m \u001b[38;5;66;03m#cv2.imwrite(obj_id_img_file, new_res_obj_id)\u001b[39;00m\n\u001b[1;32m     92\u001b[0m \u001b[38;5;66;03m#cv2.imwrite(global_img_file, new_res_global_id)\u001b[39;00m\n\u001b[1;32m     93\u001b[0m np\u001b[38;5;241m.\u001b[39msavetxt(global_img_file, new_res_global_id, fmt\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m%d\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n",
-      "File \u001b[0;32m<__array_function__ internals>:180\u001b[0m, in \u001b[0;36msavetxt\u001b[0;34m(*args, **kwargs)\u001b[0m\n",
-      "File \u001b[0;32m~/anaconda3/envs/BT/lib/python3.8/site-packages/numpy/lib/npyio.py:1537\u001b[0m, in \u001b[0;36msavetxt\u001b[0;34m(fname, X, fmt, delimiter, newline, header, footer, comments, encoding)\u001b[0m\n\u001b[1;32m   1535\u001b[0m \u001b[38;5;66;03m# Handle 1-dimensional arrays\u001b[39;00m\n\u001b[1;32m   1536\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m X\u001b[38;5;241m.\u001b[39mndim \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m \u001b[38;5;129;01mor\u001b[39;00m X\u001b[38;5;241m.\u001b[39mndim \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m2\u001b[39m:\n\u001b[0;32m-> 1537\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[1;32m   1538\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mExpected 1D or 2D array, got \u001b[39m\u001b[38;5;132;01m%d\u001b[39;00m\u001b[38;5;124mD array instead\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m%\u001b[39m X\u001b[38;5;241m.\u001b[39mndim)\n\u001b[1;32m   1539\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m X\u001b[38;5;241m.\u001b[39mndim \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[1;32m   1540\u001b[0m     \u001b[38;5;66;03m# Common case -- 1d array of numbers\u001b[39;00m\n\u001b[1;32m   1541\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m X\u001b[38;5;241m.\u001b[39mdtype\u001b[38;5;241m.\u001b[39mnames \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n",
-      "\u001b[0;31mValueError\u001b[0m: Expected 1D or 2D array, got 3D array instead"
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[199], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m#computes the mask and shows the mask\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[43mget_transformation_mask\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdata_dir\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mscenes_dir\u001b[49m\u001b[43m,\u001b[49m\u001b[43mcurr_scan_id\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnew_scan_id\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mframe_number\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[198], line 65\u001b[0m, in \u001b[0;36mget_transformation_mask\u001b[0;34m(data_dir, scenes_dir, curr_scan_id, new_scan_id, frame_number)\u001b[0m\n\u001b[1;32m     62\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m (pj_obj_id[i][j] \u001b[38;5;241m!=\u001b[39m gt_obj_id[i][j]):\n\u001b[1;32m     63\u001b[0m     \u001b[38;5;66;03m#the new values in the modified area\u001b[39;00m\n\u001b[1;32m     64\u001b[0m     new_res_color[i,j] \u001b[38;5;241m=\u001b[39m gt_color[i][j]\n\u001b[0;32m---> 65\u001b[0m     \u001b[43mnew_res_obj_id\u001b[49m\u001b[43m[\u001b[49m\u001b[43mi\u001b[49m\u001b[43m,\u001b[49m\u001b[43mj\u001b[49m\u001b[43m]\u001b[49m \u001b[38;5;241m=\u001b[39m gt_obj_id[i][j]\n\u001b[1;32m     66\u001b[0m     new_res_global_id[i,j] \u001b[38;5;241m=\u001b[39m gt_global_id[i][j]\n\u001b[1;32m     68\u001b[0m     \u001b[38;5;66;03m#the values which are impacted in curr \u001b[39;00m\n",
+      "\u001b[0;31mIndexError\u001b[0m: too many indices for array: array is 1-dimensional, but 2 were indexed"
      ]
     }
    ],
@@ -606,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -708,13 +719,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "shape of obj_id [[2 2 2 ... 1 1 1]\n",
+      " [2 2 2 ... 1 1 1]\n",
+      " [2 2 2 ... 1 1 1]\n",
+      " ...\n",
+      " [2 2 2 ... 1 1 1]\n",
+      " [2 2 2 ... 1 1 1]\n",
+      " [2 2 2 ... 1 1 1]]\n",
       "new obj [[[255 255 255]\n",
       "  [255 255 255]\n",
       "  [255 255 255]\n",
@@ -774,8 +792,8 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[140], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mpotential_nodes_and_edges\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdata_dir\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcurr_scan_id\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnew_scan_id\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mframe_number\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[0;32mIn[139], line 51\u001b[0m, in \u001b[0;36mpotential_nodes_and_edges\u001b[0;34m(data_dir, curr_scan_id, new_scan_id, frame_number)\u001b[0m\n\u001b[1;32m     48\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(img_height):\n\u001b[1;32m     49\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m j \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(img_width):\n\u001b[1;32m     50\u001b[0m         \u001b[38;5;66;03m#go only over the parts which have a change\u001b[39;00m\n\u001b[0;32m---> 51\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m new_global[i][j] \u001b[38;5;241m!=\u001b[39m \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m:\n\u001b[1;32m     52\u001b[0m             \u001b[38;5;66;03m#get the current of the frame\u001b[39;00m\n\u001b[1;32m     53\u001b[0m             affected_curr_nodes\u001b[38;5;241m.\u001b[39mappend(curr_obj)\n\u001b[1;32m     54\u001b[0m             affected_new_nodes\u001b[38;5;241m.\u001b[39mappend(new_obj)\n",
+      "Cell \u001b[0;32mIn[175], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mpotential_nodes_and_edges\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdata_dir\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcurr_scan_id\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnew_scan_id\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mframe_number\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[174], line 51\u001b[0m, in \u001b[0;36mpotential_nodes_and_edges\u001b[0;34m(data_dir, curr_scan_id, new_scan_id, frame_number)\u001b[0m\n\u001b[1;32m     48\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(img_height):\n\u001b[1;32m     49\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m j \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(img_width):\n\u001b[1;32m     50\u001b[0m         \u001b[38;5;66;03m#go only over the parts which have a change\u001b[39;00m\n\u001b[0;32m---> 51\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m new_global[i][j] \u001b[38;5;241m!=\u001b[39m \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m:\n\u001b[1;32m     52\u001b[0m             \u001b[38;5;66;03m#get the current of the frame\u001b[39;00m\n\u001b[1;32m     53\u001b[0m             affected_curr_nodes\u001b[38;5;241m.\u001b[39mappend(curr_obj)\n\u001b[1;32m     54\u001b[0m             affected_new_nodes\u001b[38;5;241m.\u001b[39mappend(new_obj)\n",
       "\u001b[0;31mValueError\u001b[0m: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()"
      ]
     }
